name:                complexity-analysis
version:             0.0.0.0
synopsis:            Complexity analysis using abstract definitional interpreters.
-- description:
homepage:            https://github.com/robrix/complexity-analysis
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Analysis.Complexity
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
