name:                complexity-analysis
version:             0.0.0.0
synopsis:            Complexity analysis using abstract definitional interpreters.
homepage:            https://github.com/robrix/complexity-analysis
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2017 Rob Rix
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Analysis.Elaboration
                     , Control.Monad.Fresh
                     , Data.Complexity
                     , Data.Env
                     , Data.Expr
                     , Data.Interval
                     , Data.Name
                     , Data.Subst
                     , Data.Type
  other-modules:       Data.Functor.Classes.Generic
  build-depends:       base >=4.10 && <4.11
                     , comonad
                     , containers
                     , free
                     , mtl
                     , recursion-schemes
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-name-shadowing

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  build-depends:       base >= 4.10 && <4.11
                     , doctest
                     , QuickCheck
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-name-shadowing
